@@ -8,12 +8,12 @@ import com.nhnacademy.bookstoreinjun.controller.BookController;
 import com.nhnacademy.bookstoreinjun.dto.book.BookProductRegisterRequestDto;
 import com.nhnacademy.bookstoreinjun.dto.page.PageRequestDto;
 import com.nhnacademy.bookstoreinjun.exception.AladinJsonProcessingException;
-//import com.nhnacademy.bookstoreinjun.filter.EmailHeaderFilter;
 import com.nhnacademy.bookstoreinjun.exception.NotFoundIdException;
 import com.nhnacademy.bookstoreinjun.service.aladin.AladinService;
 import com.nhnacademy.bookstoreinjun.service.book.BookService;
 import java.time.LocalDate;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Set;
 import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.BeforeEach;
@@ -41,7 +41,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 @Slf4j
 @WebMvcTest(BookController.class)
 @Import(SecurityConfig.class)
-public class BookControllerTest {
+class BookControllerTest {
 
     @Autowired
      MockMvc mockMvc;
@@ -61,7 +61,7 @@ public class BookControllerTest {
 
 
     @Test
-    public void test1() throws Exception {
+    void test1() throws Exception {
         mockMvc.perform(get("/api/product/book")
                         .header("X-User-Role", "ROLE_ADMIN")
                         .header("X-User-Id", 1)
@@ -72,10 +72,20 @@ public class BookControllerTest {
         verify(aladinService,times(1)).getAladdinBookPage(any(), eq("이해"));
     }
 
+    @DisplayName("도서 상품 중복 조회 테스트")
+    @Test
+    @WithMockUser(roles = "ADMIN")
+    void isbnCheckTest() throws Exception {
+        mockMvc.perform(get("/api/product/book/isbnCheck")
+                        .param("isbn", "1234567890"))
+                .andExpect(status().isOk())
+                .andDo(print());
+    }
+
     @DisplayName("도서 상품 등록 성공 테스트")
     @Test
     @WithMockUser(roles = "ADMIN")
-    public void test2() throws Exception {
+    void test2() throws Exception {
 
         BookProductRegisterRequestDto bookProductRegisterRequestDto = BookProductRegisterRequestDto.builder()
                 .title("test title")
@@ -92,7 +102,7 @@ public class BookControllerTest {
                 .productPriceSales(1)
                 .packable(false)
                 .categories(
-                        Set.copyOf(Arrays.asList("category1"))
+                        Set.copyOf(List.of("category1"))
                 )
                 .tags(
                         Set.copyOf(Arrays.asList("test tag1","test tag2")))
@@ -114,7 +124,7 @@ public class BookControllerTest {
     @DisplayName("도서 상품 등록 실패 테스트 - 상품명 제약 조건 위반 (최소 2 글자)")
     @Test
     @WithMockUser(roles = "ADMIN")
-    public void test5() throws Exception {
+    void test5() throws Exception {
         BookProductRegisterRequestDto bookProductRegisterRequestDto = BookProductRegisterRequestDto.builder()
                 .title("test title")
                 .pubDate(LocalDate.now())
@@ -152,7 +162,7 @@ public class BookControllerTest {
     @DisplayName("알라딘 북 리스트 가져오기 성공.")
     @Test
     @WithMockUser(roles = "ADMIN")
-    public void test3() throws Exception {
+    void test3() throws Exception {
         mockMvc.perform(get("/api/product/book")
                         .header("X-User-Role", "ROLE_ADMIN")
                         .header("X-User-Id", 1)
@@ -163,7 +173,7 @@ public class BookControllerTest {
     @DisplayName("알라딘 북 리스트 가져오기 실패.")
     @Test
     @WithMockUser(roles = "ADMIN")
-    public void test4() throws Exception {
+    void test4() throws Exception {
         when(aladinService.getAladdinBookPage(any(), eq("이해"))).thenThrow(new AladinJsonProcessingException("error"));
 
         mockMvc.perform(get("/api/product/book")
@@ -176,7 +186,7 @@ public class BookControllerTest {
     @DisplayName("개별 도서 조회 성공")
     @Test
     @WithMockUser(roles = "CLIENT")
-    public void getIndividualBookTestSuccess() throws Exception {
+    void getIndividualBookTestSuccess() throws Exception {
         mockMvc.perform(get("/api/product/book/1"))
                 .andExpect(status().isOk());
     }
@@ -184,7 +194,7 @@ public class BookControllerTest {
     @DisplayName("개별 도서 조회 실패")
     @Test
     @WithMockUser(roles = "CLIENT")
-    public void getIndividualBookTestFailure() throws Exception {
+    void getIndividualBookTestFailure() throws Exception {
         when(bookService.getBookByProductId(any(), eq(1L))).thenThrow(NotFoundIdException.class);
 
         mockMvc.perform(get("/api/product/book/1"))
@@ -194,7 +204,7 @@ public class BookControllerTest {
     @DisplayName("도서 페이지 조회 성공")
     @WithMockUser(roles = "CLIENT")
     @Test
-    public void getBookPageSuccess() throws Exception {
+    void getBookPageSuccess() throws Exception {
         PageRequestDto dto = PageRequestDto.builder().build();
 
         String json = objectMapper.writeValueAsString(dto);
@@ -204,43 +214,39 @@ public class BookControllerTest {
                 .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk());
     }
-//
-//    @DisplayName("도서 페이지 조회 실패 - 잘못된 정렬 조건")
-//    @WithMockUser(roles = "CLIENT")
-//    @Test
-//    public void getBookPageFailureByWrongSortValue() throws Exception {
-//        when(bookService.getBookPage(eq(1L), any())).thenThrow(InvalidSortNameException.class);
-//
-//        PageRequestDto dto = PageRequestDto.builder()
-//                .sort("wrong sort")
-//                .build();
-//
-//        String json = objectMapper.writeValueAsString(dto);
-//
-//        mockMvc.perform(get("/api/product/books")
-//                        .param("sort", "wrong sort"))
-////                        .content(json)
-////                        .contentType(MediaType.APPLICATION_JSON))
-//                .andExpect(status().isBadRequest());
-//    }
-//
-//    @DisplayName("도서 페이지 조회 실패 - 초과 페이지 요청")
-//    @WithMockUser(roles = "CLIENT")
-//    @Test
-//    public void getBookPageFailureByOutOfPageRange() throws Exception {
-//        when(bookService.getBookPage(eq(1L), any())).thenThrow(PageOutOfRangeException.class);
-//
-//        PageRequestDto dto = PageRequestDto.builder()
-//                .sort("wrong sort")
-//                .build();
-//
-//        String json = objectMapper.writeValueAsString(dto);
-//
-//        mockMvc.perform(get("/api/product/books")
-//                        .content(json)
-//                        .contentType(MediaType.APPLICATION_JSON))
-//                .andExpect(status().isNotFound());
-//    }
 
+    @DisplayName("도서 페이지 조회 - 제목 포함")
+    @WithMockUser(roles = "CLIENT")
+    @Test
+    void getBookPageByTitle() throws Exception {
+        mockMvc.perform(get("/api/product/books/containing")
+                                .param("title", "test"))
+                .andExpect(status().isOk());
+    }
 
+    @DisplayName("도서 페이지 조회 - 카테고리")
+    @WithMockUser(roles = "CLIENT")
+    @Test
+    void getBookPageByCategory() throws Exception {
+        mockMvc.perform(get("/api/product/books/category/1"))
+                .andExpect(status().isOk());
+    }
+
+    @DisplayName("도서 페이지 조회 - 태그")
+    @WithMockUser(roles = "CLIENT")
+    @Test
+    void getBookPageByTag() throws Exception {
+        mockMvc.perform(get("/api/product/books/tagFilter")
+                        .param("tagName", "test,test2"))
+                .andExpect(status().isOk());
+    }
+
+    @DisplayName("도서 페이지 조회 - 나의 좋아요")
+    @WithMockUser(roles = "CLIENT")
+    @Test
+    void getBookPageByMyLike() throws Exception {
+        mockMvc.perform(get("/api/product/client/books/like")
+                        .header("X-User-Id", 1))
+                .andExpect(status().isOk());
+    }
 }
